# rsync-rs

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
src/cmd/: mod.rs
src/io/: mod.rs
src/ssh/: mod.rs
src/util/: mod.rs
